# xsens_mtw_driver_ros2

./: LICENSE  README.md
imu_msgs/: package.xml
imu_msgs/msg/: IMUData.msg  IMUDataArray.msg
interfaces/imu_msgs/: CMakeLists.txt  package.xml
interfaces/imu_msgs/msg/: IMUData.msg  IMUDataSingle.msg
interfaces/xsens_srvs/: CMakeLists.txt  package.xml
interfaces/xsens_srvs/srv/: StartRecording.srv  Trigger.srv
xsens_mtw_driver/: CMakeLists.txt  package.xml
xsens_mtw_driver/config/: params.yaml
xsens_mtw_driver/include/xsens/: conio.h  xsensdeviceapi.h  xsmutex.h  xstypes.h
xsens_mtw_driver/include/xsens/xsensdeviceapi/: xscoordinatesystem.h  xsdeviceconfiguration.h  xsfloatformat.h  xsicccommand.h  xsprocessingflag.h  xsselftestresult.h
xsens_mtw_driver/include/xsens/xstypes/: xsarray.h  xsdeviceidarray.h
xsens_mtw_driver/include/xsens_mtw_driver/: mastercallback.hpp  mtwcallback.hpp  xsens_mtw_manager.hpp  xsens_mtw_visualization.hpp
xsens_mtw_driver/launch/: xsens_mtw_manager.launch.py  xsens_mtw_visualization.launch.py
xsens_mtw_driver/lib/: libxsensdeviceapi.so.2022.2.0  libxstypes.so.2022.0.0  libxstypes.so.2022.2.0
xsens_mtw_driver/src/: conio.c  mastercallback.cpp  mtwcallback.cpp  vqf.cpp  xsens_mtw_manager.cpp  xsens_mtw_manager_node.cpp  xsens_mtw_visualization.cpp  xsens_mtw_visualization_node.cpp
xsens_mtw_driver/tests/: test_xsens_mtw_manager.cpp
xsens_mtw_driver_ros2/: CMakeLists.txt  README.md  package.xml
xsens_mtw_driver_ros2/config/: imu_mapping.yaml  params.yaml
xsens_mtw_driver_ros2/include/xsens/xsensdeviceapi/: sort.py  xdaconfig.h  xdadll.h  xdainfo.h  xscalibrateddatamode.h  xscallbackplainc.h  xscontrol.h  xscontrollerconfig.h  xsdef.h  xsdevice.h  xsdeviceparameter.h  xsdeviceptrarray.h  xsdeviceref.h  xsdevicestate.h  xsgnssplatform.h  xsiccrepmotionresult.h  xsorientationmode.h  xsscanner.h  xsusbhubinfo.h
xsens_mtw_driver_ros2/include/xsens/xstypes/: xseuler.h  xsquaternion.h  xstypesconfig.h
xsens_mtw_driver_ros2/include/xsens_mtw_driver_ros2/: findClosestUpdateRate.hpp  mastercallback.hpp  mtwcallback.hpp  xsens_mtw_manager.hpp  xsens_mtw_visualization.hpp
xsens_mtw_driver_ros2/launch/: xsens_mtw_manager.launch.py  xsens_mtw_visualization.launch.py
xsens_mtw_driver_ros2/lib/: libxsensdeviceapi.so.2022  libxsensdeviceapi.so.2022.0.0  libxstypes.so.2022
xsens_mtw_driver_ros2/src/: conio.c  findClosestUpdateRate.cpp  mastercallback.cpp  mtwcallback.cpp  vqf.cpp  xsens_mtw_manager.cpp  xsens_mtw_manager_node.cpp  xsens_mtw_visualization.cpp  xsens_mtw_visualization_node.cpp
