<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xsens_mtw_driver</name>
  <version>1.0.0</version>
  <description>A driver for using the Xsens MTw Awinda system within ROS2.</description>
  <maintainer email="sommler@live.de">Kevin Sommler</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>imu_msgs</depend>
  <depend>xsens_srvs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>